--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,7 @@
   
 [user]
 	name = Miguel Rodríguez Álvarez
-	email = cesalberca@gmail.com
+	email = miguel.rdrgz.alvarez@gmail.com
 [alias]
   c = commit -m
   ch = checkout
